[gd_scene load_steps=42 format=3 uid="uid://ddmehvvff8lxn"]

[ext_resource type="Script" path="res://scripts/poppy.gd" id="1_7yo6t"]
[ext_resource type="Shader" path="res://shaders/hitflash.gdshader" id="1_pl5c1"]
[ext_resource type="Texture2D" uid="uid://cimlt0c3o3uee" path="res://assets/gamesprites/player_poppy/poppy 3 attack.png" id="2_qboue"]
[ext_resource type="Texture2D" uid="uid://d3res8hgtpsbn" path="res://assets/gamesprites/player_poppy/poppy 3 fall.png" id="3_xrk3w"]
[ext_resource type="Texture2D" uid="uid://dct7nctmvs0cj" path="res://assets/gamesprites/player_poppy/poppy 3 idle.png" id="4_utyeu"]
[ext_resource type="Texture2D" uid="uid://ceyhhfyvjf1cw" path="res://assets/gamesprites/player_poppy/poppy 3 jump.png" id="5_7kna2"]
[ext_resource type="Texture2D" uid="uid://6sk7nikl6n1f" path="res://assets/gamesprites/player_poppy/poppy 3 hurt temp.png" id="5_p2oxs"]
[ext_resource type="Texture2D" uid="uid://bypv8lblwca4m" path="res://assets/gamesprites/player_poppy/poppy 3 midair.png" id="6_o66wh"]
[ext_resource type="Texture2D" uid="uid://b6b0hdb4mr64h" path="res://assets/gamesprites/player_poppy/poppy 3 run.png" id="7_j5uhn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_16p87"]
shader = ExtResource("1_pl5c1")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/flash_interval = 0.15

[sub_resource type="AtlasTexture" id="AtlasTexture_a5g0y"]
atlas = ExtResource("2_qboue")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_34yic"]
atlas = ExtResource("2_qboue")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_msq30"]
atlas = ExtResource("2_qboue")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4u7b"]
atlas = ExtResource("2_qboue")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjexb"]
atlas = ExtResource("2_qboue")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_08qlj"]
atlas = ExtResource("2_qboue")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_plwsc"]
atlas = ExtResource("3_xrk3w")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg7dp"]
atlas = ExtResource("3_xrk3w")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujr8b"]
atlas = ExtResource("5_p2oxs")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8av5q"]
atlas = ExtResource("4_utyeu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdyby"]
atlas = ExtResource("4_utyeu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0phb1"]
atlas = ExtResource("4_utyeu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyg0u"]
atlas = ExtResource("4_utyeu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7gge"]
atlas = ExtResource("4_utyeu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tjaj"]
atlas = ExtResource("4_utyeu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_onucw"]
atlas = ExtResource("5_7kna2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jhio"]
atlas = ExtResource("6_o66wh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2s8o"]
atlas = ExtResource("6_o66wh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j648v"]
atlas = ExtResource("7_j5uhn")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4bum"]
atlas = ExtResource("7_j5uhn")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju58c"]
atlas = ExtResource("7_j5uhn")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rqhx"]
atlas = ExtResource("7_j5uhn")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg5kc"]
atlas = ExtResource("7_j5uhn")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypiqc"]
atlas = ExtResource("7_j5uhn")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c6q7"]
atlas = ExtResource("7_j5uhn")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2fw8"]
atlas = ExtResource("7_j5uhn")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsfrj"]
atlas = ExtResource("7_j5uhn")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpffj"]
atlas = ExtResource("7_j5uhn")
region = Rect2(432, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ew31k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5g0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34yic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msq30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4u7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjexb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08qlj")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plwsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg7dp")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujr8b")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8av5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdyby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0phb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyg0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7gge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tjaj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onucw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jhio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2s8o")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j648v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4bum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju58c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rqhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypiqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c6q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2fw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsfrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpffj")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bvuda"]
radius = 6.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k8sg5"]
height = 28.0

[node name="Poppy" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
collision_mask = 14
script = ExtResource("1_7yo6t")

[node name="FullBodyAnim" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_16p87")
sprite_frames = SubResource("SpriteFrames_ew31k")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.981332

[node name="BodyAnim" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ew31k")
animation = &"idle"
autoplay = "idle"

[node name="HeadArmorAnim" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ew31k")
animation = &"idle"
autoplay = "idle"

[node name="HeadBareAnim" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ew31k")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_bvuda")

[node name="PositionUpdate" type="Timer" parent="."]
process_callback = 0
wait_time = 0.4
autostart = true

[node name="SwordHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitbox"]
position = Vector2(13, 6)
shape = SubResource("CapsuleShape2D_k8sg5")
disabled = true
debug_color = Color(0.381848, 0.595654, 0.416095, 0.42)

[node name="DamagedIframeDuration" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="KnockbackRecoverOnLanding" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="PositionUpdate" to="." method="_on_position_update_timeout"]
[connection signal="body_entered" from="SwordHitbox" to="." method="_on_sword_hitbox_body_entered"]
[connection signal="timeout" from="DamagedIframeDuration" to="." method="_on_damaged_iframe_timeout"]
[connection signal="timeout" from="KnockbackRecoverOnLanding" to="." method="_on_knockback_recover_on_landing_timeout"]
